# synthetic-simulator

./: .env.sample  .gitignore  LICENSE  README.md  basic_usage.py  conversation_simulator_demo.py  conversation_simulator_demo_notebook.ipynb  example_output.jsonl  model_utils.py  pyproject.toml
chat_service/: __init__.py  context_generators.py  service.py  synthetic_generation.py
examples/: basic_usage.py  fc_agent.py  mock_usage.py
mock_server/: __init__.py  server.py
output/: conversation_history.jsonl  mock_conversation_history.jsonl
simulator_service/: __init__.py  logging_config.py  synthetic_generation.py
