[tool.poetry]
name = "synthetic-service"
version = "0.1.0"
description = "Synthetic converastion simulator"
authors = ["User"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
databricks-agents = "^0.13.0"
databricks-sdk = {extras = ["openai"], version = "^0.40.0"}
python-dotenv = "^1.0.0"
backoff = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
